plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.sonarqube" version "4.0.0.2929"
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'

	//AWS Parameter Store
	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0')
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//Spring OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//Jasypt
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	//P6Spy (쿼리 파라미터 로그)
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'

	//MapStruct
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	testImplementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0' //lombok annotation processor와의 충돌 제거

	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//AWS SES
	implementation 'com.amazonaws:aws-java-sdk-ses:1.12.713'

	//Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	//Hibernate Spatial (지리 데이터에 대한 표준 인터페이스)
	implementation 'org.hibernate:hibernate-spatial:6.4.4.Final'

	//Querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	//Feign Client
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j:3.1.2'

	//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//암호화(PEM 키)
	implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
	implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'

	//Mybatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	//OpenCSV
	implementation 'com.opencsv:opencsv:5.7.1'

	//Spring AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'integration'
	}
}

tasks.register('integrationTest', Test) {
	useJUnitPlatform()
}

jar {
	enabled = false
}

sonarqube {
	properties {
		property "sonar.projectKey", "fora-sonarqube"
		property "sonar.host.url", "http://3.35.113.133:3000"
	}
}